--- a/VueStartD1/07_LinkMenu/practice.html
+++ b/VueStartD1/07_LinkMenu/practice.html
@@ -82,19 +82,28 @@
                 //用map 塞選出符合條件陣列,map 會回傳一樣長度的陣列,不符合的會是undefined
                 //會變[undefined,undefined,undefined,12, undefined,undefined]
                 //再用filter去掉undefined 就會剩下索引值
-                let index = this.directList.map((item, index, array) => {
-                  if(item.cityIndex === this.index.city && item.areaIndex === this.index.area){
-                    return index
-                    // 也可回傳物件
-                  }
-                }).filter( (indexItem) => {
-                  if( indexItem !== undefined){
-                    return indexItem
-                  }
-                });
-                console.log(index);
-                // console.log(index)
-                this.index.direct = index[0]
+                // let index = this.directList.map((item, index, array) => {
+                //   if(item.cityIndex === this.index.city && item.areaIndex === this.index.area){
+                //     return index
+                //     // 也可回傳物件
+                //   }
+                // }).filter( (indexItem) => {
+                //   if( indexItem !== undefined){
+                //     return indexItem
+                //   }
+                // });
+                // console.log(index);
+                // // console.log(index)
+                // this.index.direct = index[0];
+
+                // 方法2 ie不支援
+                if( this.indexCity !== null && this.indexArea !== null){
+                  this.index.direct = this.directList.findIndex(item => {
+                    // console.log(this.indexCity)
+                    // console.log('item.cityIndex',item.cityIndex);
+                   return  item.cityIndex === this.index.city && item.areaIndex === this.index.area
+                  });
+                }
               }
             },
             nowCity() {
