--- a/VueStartD1/10_ComponentKeep/index.html
+++ b/VueStartD1/10_ComponentKeep/index.html
@@ -13,10 +13,12 @@
         <div class="container">
           <h1>{{ step }}</h1>
           <div>
+<!--         :include 選擇要保留哪個component  不寫代表全部 -->
             <keep-alive :include="keepPrevStep">
-              <name-component v-if="step===0"></name-component>
-              <gender-component v-if="step===1"></gender-component>
-              <area-component v-if="step===2"></area-component>
+              <component :is="nowComponent"></component>
+<!--              <name-component v-if="step===0"></name-component>-->
+<!--              <gender-component v-if="step===1"></gender-component>-->
+<!--              <area-component v-if="step===2"></area-component>-->
             </keep-alive>
           </div>
 
@@ -92,15 +94,18 @@
               }
               return acc;
             }, []);
+          },
+          nowComponent() {
+            return this.mapping.filter(item => item.step === this.step)[0].name
           }
         },
         methods: {
           stepHandler(direct) {
             this.step =
               this.step + direct < 0
-                ? 0
-                : this.step + direct >= this.total - 1
-                ? this.total - 1
+                ? 0 // if
+                : this.step + direct >= this.total - 1 // else if
+                ? this.total - 1 // else
                 : this.step + direct;
           },
           submitHandler() {}
