--- a/VueStartD1/10_ComponentKeep/practice.html
+++ b/VueStartD1/10_ComponentKeep/practice.html
@@ -13,8 +13,8 @@
         <div class="container">
           <h1>{{ step }}</h1>
           <div>
-            <div>上一步</div>
-            <div>下一步</div>
+            <div class="button">上一步</div>
+            <div class="button">下一步</div>
           </div>
         </div>
       </section>
