Day3 上課完(未完)

--- a/VueStartD2/05_Vuex/index.html
+++ b/VueStartD2/05_Vuex/index.html
@@ -42,6 +42,7 @@
             },
             set(val) {
               // this.$store.state.count = val;
+              console.log("val", val);
               this.$store.commit("change", val);
             }
           }
