--- a/VueStartD2/06_Action/index.html
+++ b/VueStartD2/06_Action/index.html
@@ -30,6 +30,17 @@
           }
         },
         actions: {
+          // 方法一
+          // 不存回store 直接return 回component  可以把存在component 因為資料不共用
+          // getNumber: function(context) {
+          //   return new Promise((resolve, reject) => {
+          //     setTimeout(function() {
+          //       let number = Math.random();
+          //       resolve(number);
+          //     }, 1000);
+          //   });
+
+          //方法二 正常存回store
           getNumber: function(context) {
             return new Promise((resolve, reject) => {
               setTimeout(function() {
@@ -37,6 +48,16 @@
                 resolve();
               }, 1000);
             });
+
+            //// 寫法二
+            //// context => commit, dispatch, getters,states, rootGetter, rootState(讓子模組能拿父模組資料)
+            // getNumber: function({ commit }) {
+            //   return new Promise((resolve, reject) => {
+            //     setTimeout(function() {
+            //       commit("change", Math.random());
+            //       resolve();
+            //     }, 1000);
+            //   });
           }
         }
       });
@@ -44,17 +65,21 @@
         el: "#app",
         data: {
           loading: false
+          // numberData: ""
         },
         store,
         computed: {
           number() {
-            return this.$store.state.number;
+            // return this.numberData;  // 方法ㄧ
+            return this.$store.state.number; // 方法二
           }
         },
         methods: {
           async getNumber() {
             this.loading = true;
-            await this.$store.dispatch("getNumber");
+            // this.numberData = await this.$store.dispatch("getNumber"); // 方法ㄧ
+            // 用async await 來確保資料回傳後才執行 loading = false
+            await this.$store.dispatch("getNumber"); // 方法二
             this.loading = false;
           }
         },
